--- a/mingw-w64-doxygen1.8/PKGBUILD
+++ b/mingw-w64-doxygen1.8/PKGBUILD
@@ -7,6 +7,7 @@ pkgver=1.8.20
 pkgrel=1
 pkgdesc="A documentation system for C++, C, Java, IDL and PHP (mingw-w64)"
 arch=('any')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="http://www.doxygen.org/"
 options=('strip' 'staticlibs')
 license=('GPL')
